[code comitted on 23 nov 2025]

--- a/Project-Practice.properties
+++ b/Project-Practice.properties
@@ -1,2 +1,11 @@
+#####-----Envrionment URLs-----------
+
+India=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+Australia=https://www.dyson.com.au/
+Japan=https://www.dyson.co.jp/ja
+Turkey=https://www.dyson.com.tr/
+
+
+#####-----Login Credentials-----------
 USERNAME=Admin
 PASSWORD=admin123
