[commited changes url: 22Jan2026 : 16:52]

--- a/Project-Practice.properties
+++ b/Project-Practice.properties
@@ -1,9 +1,17 @@
-#####-----Envrionment URLs-----------
+#####-----QA Envrionment URLs-----------
 
-India=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-Australia=https://www.dyson.com.au/
-Japan=https://www.dyson.co.jp/ja
-Turkey=https://www.dyson.com.tr/
+QA_India=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+QA_Australia=https://www.dyson.com.au/
+QA_Japan=https://www.dyson.co.jp/ja
+QA_Turkey=https://www.dyson.com.tr/
+
+
+#####----UAT Envrionment URLs-----------
+
+UAT_India=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+UAT_Australia=https://www.dyson.com.au/
+UAT_Japan=https://www.dyson.co.jp/ja
+UAT_Turkey=https://www.dyson.com.tr/
 
 
 #####-----Login Credentials-----------
