--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
   
   
   
+   <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+  
+  
   
   
   <dependencies>
@@ -138,6 +144,7 @@
 	        <configuration>  
 	        <source> 1.8 </source> 
 	        <target> 1.8</target> 
+	        <encoding>UTF-8</encoding>
 	         </configuration>
           </plugin> 
           
