--- a/pom.xml
+++ b/pom.xml
@@ -113,19 +113,19 @@
 			
 			
 							
-					<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<!--					 https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core 
 				<dependency>
 				    <groupId>org.apache.logging.log4j</groupId>
 				    <artifactId>log4j-core</artifactId>
 				    <version>2.24.0</version>
-				</dependency>
+				</dependency>-->
 						
 					<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-		<dependency>
+<!--		<dependency>
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-api</artifactId>
 		    <version>2.0.16</version>
-		</dependency>
+		</dependency>-->
 				
 					
 	
