--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,37 +1,17 @@
-// Here we have defined root logger
-log4j.rootLogger=INFO,CONSOLE,R,HTML,TTCC
- 
-// Here we define the appender
+# ================= Root Logger =================
+log4j.rootLogger=INFO, CONSOLE, FILE
+
+# ================= Console Appender =================
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.TTCC=org.apache.log4j.RollingFileAppender
-log4j.appender.HTML=org.apache.log4j.FileAppender
- 
-// Here we define log file location
-log4j.appender.R.File=.//Logs/ExecutionLog.log
-log4j.appender.TTCC.File=.//Logs/ExecutionLog1.log
-log4j.appender.HTML.File=.//Logs/ExecutionLog.html
- 
-// Here we define the layout and pattern
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern= %5p [%t] (%F:%L)- %m%n
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%d - %c -%p - %m%n
-log4j.appender.TTCC.layout=org.apache.log4j.TTCCLayout
-log4j.appender.TTCC.layout.DateFormat=ISO8601
-log4j.appender.HTML.layout=org.apache.log4j.HTMLLayout
-log4j.appender.HTML.layout.Title=Application log
-log4j.appender.HTML.layout.LocationInfo=true
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
 
+# ================= Rolling File Appender =================
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.FILE.File=Logs/Execution.log
+log4j.appender.FILE.MaxFileSize=10MB
+log4j.appender.FILE.MaxBackupIndex=5
+log4j.appender.FILE.Append=true
 
-#log4j.rootLogger=INFO, console, file
-#
-#log4j.appender.console=org.apache.log4j.ConsoleAppender
-#log4j.appender.console.layout=org.apache.log4j.PatternLayout
-#log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c{1}:%L - %m%n
-#
-#log4j.appender.file=org.apache.log4j.FileAppender
-#log4j.appender.file.File=logs/project-practice.log
-#log4j.appender.file.layout=org.apache.log4j.PatternLayout
-#log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c{1}:%L - %m%n
-
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
