--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,11 @@
 		    <version>2.0.16</version>
 		</dependency>-->
 				
-					
+			<dependency>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-simple</artifactId>
+  <version>2.0.9</version>
+</dependency>		
 	
 	
   </dependencies>
